@@ -1592,6 +1592,8 @@ MyTorrentsView.commenticon.info=Displays icon if the download has a user-defined
 MyTrackerView.category=Category
 MainWindow.menu.file.open.torrentfortracking=Torrent File... (Tracking Only)
 VivaldiView.title.full=Vivaldi
+VivaldiView.title.fullcvs=Vivaldi CVS
+VivaldiView.title.full_v6=Vivaldi IPv6
 MyTrackerView.date_added=Added
 ConfigView.section.tracker.portbackup=Backup ports (';' separated)
 ConfigView.label.playfilespeech=Speak when a file is finished
